Fix spacing in stats section - #7
* Shrink the top margins in the stats section

--- a/css/style.css
+++ b/css/style.css
@@ -68,14 +68,14 @@
 }
 
 .stat-value {
-  margin-top: 30px;
+  margin-top: 10px;
   font-size: 40px;
   font-weight: 800;
   line-height: 1em;
 }
 
 .stat-caption {
-  margin-top: 10px;
+  margin-top: 0;
   font-size: 13px;
   letter-spacing: 1.5px;
   text-transform: uppercase;
